--- a/test.ipynb
+++ b/test.ipynb
@@ -6,7 +6,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#건들지마세요"
+    "#건들지마세요 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
    ]
   }
  ],
